[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/lifeBar.png" type="Texture" id=1]
[ext_resource path="res://assets/images/lifeAndMagic.png" type="Texture" id=2]
[ext_resource path="res://assets/fights/icon/ryanman.png" type="Texture" id=3]
[ext_resource path="res://scripts/menu/healthBar.gd" type="Script" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 448, 630, 798, 98 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 406, 826, 798, 28 )

[node name="HealthBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="PlayerIcon" type="TextureRect" parent="."]
margin_left = -142.0
margin_top = -64.0
margin_right = -66.0
margin_bottom = 7.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -66.0
margin_top = -36.0
margin_right = 112.0
margin_bottom = -10.0
custom_styles/fg = SubResource( 1 )
step = 1.0
value = 100.0
percent_visible = false

[node name="ManaBar" type="ProgressBar" parent="."]
margin_left = -67.0
margin_top = -7.0
margin_right = 103.0
margin_bottom = 3.0
custom_styles/fg = SubResource( 2 )
value = 40.0
percent_visible = false

[node name="Win1" type="ColorRect" parent="."]
margin_left = -63.0
margin_top = 3.0
margin_right = -52.0
margin_bottom = 13.0
color = Color( 1, 1, 1, 0.235294 )

[node name="Win2" type="ColorRect" parent="."]
margin_left = -46.0
margin_top = 3.0
margin_right = -35.0
margin_bottom = 13.0
color = Color( 1, 1, 1, 0.235294 )

[node name="Frame" type="TextureRect" parent="."]
margin_left = -152.0
margin_top = -152.0
margin_right = 848.0
margin_bottom = 848.0
rect_scale = Vector2( 0.3, 0.3 )
rect_clip_content = true
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
